# pythoncpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PythonCpp.sln  README.md  devcopy.xml
Install/: Install.vcxproj  Install.vcxproj.filters
PythonCpp/: PythonBuilders.h  PythonClass.cpp  PythonClass.h  PythonCpp.vcxproj  PythonCpp.vcxproj.filters  PythonDict.cpp  PythonDict.h  PythonException.cpp  PythonException.h  PythonFunction.cpp  PythonFunction.h  PythonInspect.cpp  PythonInstance.cpp  PythonList.cpp  PythonMain.cpp  PythonMain.h  PythonModule.cpp  PythonModule.h  PythonObject.cpp  PythonObject.h  PythonTuple.cpp  PythonType.cpp  PythonType.h
PythonCpp/private/: Python.hpp
PythonCppExample/: PythonCppExample.cpp  PythonCppExample.vcxproj  PythonCppExample.vcxproj.filters  basic_example.h  common.h  create_class_example.h  create_module_example.h  module_reloading_example.h  python_class_example.h  run_code_example.h
PythonCppExample/python/: basic_example.py  class_example.py  module_example_b.py
Test/: Test.vcxproj  Test.vcxproj.filters  testClasses.cpp  testCommon.h  testDictionary.cpp  testFunctions.cpp  testInspect.cpp  testList.cpp  testTuple.cpp  testVariables.cpp
Test/python/: test_3rd_party.py  testcreatemodules.py  testmodule.py
cmake/: InstallPython.cmake  PythonCppConfig.cmake.in
example/: CMakeLists.txt
example/include/: CMakeLists.txt  basic_example.h  builtin_module_example.h  common.h  create_class_example.h  create_function_example.h  create_module_example.h  distributed_example.h  module_reloading_example.h  python_class_example.h  run_code_example.h  usage_example.h
example/python/: module_example.py  module_example_import.py  third_party_example.py
example/src/: CMakeLists.txt  PythonCppExample.cpp
include/: CMakeLists.txt  PythonBuilders.h  PythonClass.h  PythonCpp.h  PythonFunction.h  PythonInspect.h  PythonInstance.h  PythonList.h  PythonTuple.h
include/private/: Python.hpp
include/pythoncpp/: CMakeLists.txt  PythonBuilders.h  PythonClass.h  PythonCpp.h  PythonDefs.h  PythonDict.h  PythonException.h  PythonFunction.h  PythonInspect.h  PythonInstance.h  PythonList.h  PythonModule.h  PythonObject.h  PythonTuple.h  PythonType.h
scripts/: installpython.py
src/: CMakeLists.txt  PythonBuilders.cpp  PythonClass.cpp  PythonCppCommon.hpp  PythonDict.cpp  PythonException.cpp  PythonFunction.cpp  PythonInspect.cpp  PythonInstance.cpp  PythonList.cpp  PythonMain.cpp  PythonModule.cpp  PythonObject.cpp  PythonTuple.cpp  PythonType.cpp
test/: CMakeLists.txt
test/src/: testClassesCreation.cpp  testThirdPartyModules.cpp
tests/: CMakeLists.txt
tests/include/: CMakeLists.txt  pythondefs.h  testCommon.h
tests/python/: secondarymodule.py  testclasses.py
tests/src/: CMakeLists.txt  main.cpp  testClasses.cpp  testClassesCreation.cpp  testDictionary.cpp  testFunctions.cpp  testInspect.cpp  testList.cpp  testMemory.cpp  testModule.cpp  testThirdPartyModules.cpp  testTuple.cpp  testVariables.cpp
